# aoc-solutions

./: .gitignore  helpers.py  pyproject.toml  start.sh
2022/1/: code.py
2022/10/: day10_solve.py
2022/11/: day11_solve.py
2022/2/: code.py
2022/3/: code.py
2022/5/: code.py  day5_solve.py
2022/6/: day6_solve.py
2022/7/: code.py
2022/8/: code.py  day8_solve.py
2022/9/: day9_solve.py
2023/: 01.ipynb  02.ipynb  03.ipynb  04.ipynb  05.ipynb  06.ipynb  07.ipynb  08.ipynb  09.ipynb  10.ipynb  11.ipynb  12.ipynb  13.ipynb  14.ipynb  15.ipynb  16.ipynb  17.ipynb  18.ipynb  19.ipynb  20.ipynb  21.ipynb  template.ipynb
2024/: day1.py  day2.py  day3.py
2024/1/: day1.py
2024/2/: day2.py
2024/3/: day3.py
2024/4/: code.py
2024/5/: code.py
2024/6/: code.py
2024/7/: code.py
2024/8/: code.py
2024/9/: code.py
helpers/: pyproject.toml
helpers/src/helpers/: __init__.py  helpers.py
