[project]
name = "adventofcode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "helpers",
    "numpy>=2.1.2",
    "tqdm>=4.67.1",
]

[tool.ruff]
line-length = 120


[tool.uv.sources]
helpers = { path = "helpers", editable = true }
